--- a/Ejercicio_01.html
+++ b/Ejercicio_01.html
@@ -100,5 +100,8 @@
                 <td>22g</td>
             </tr>
     </span>
+    <div class="autor">
+        <p>libro</p>
+    </div>
 </body>
 </html>
