--- a/Ejercicio_01.html
+++ b/Ejercicio_01.html
@@ -19,9 +19,9 @@
     <section>
         <h2>Preparation time</h2>
         <ul>
-            <li><b>Total: </b> Approximately 10 minutes</li>
-            <li><b>Preparation: </b>5 minutes</li>
-            <li><b>Cooking: </b>5 minutes</li>
+            <li><strong>Total: </strong> Approximately 10 minutes</li>
+            <li><strong>Preparation: </strong>5 minutes</li>
+            <li><strong>Cooking: </strong>5 minutes</li>
         </ul>
     </section>
     <section>
@@ -39,19 +39,19 @@
         <h3>Instrucions</h3>
         <ol>
             <li>
-                <b>Beat the eggs: </b>
+                <strong>Beat the eggs: </strong>
                 In a bowñ, beat the eggs with a pinch of salt and pepper 
                 until they are well mixed, You can add a tablespoon of 
                 water or milk for a ñuffier texture.
             </li>
             <br>
             <li>
-                <b>Heat the pan: </b>
+                <strong>Heat the pan: </strong>
                 Place a non-stick frying pan aver medium heat and add buffer or oil.
             </li>
             <br>
             <li>
-                <b>Cook the amelette:</b>
+                <strong>Cook the amelette:</strong>
                 Once the buffer is melted and bubbling, pour in the eggs.
                 Tilt the pan to ensure the eggs evenly coat the surface.
             </li>
@@ -64,14 +64,14 @@
             </li>
             <br>
             <li>
-                <b>Fold and server: </b>
+                <strong>Fold and server: </strong>
                 As the omelette continues to cook, corefully lift one edge and 
                 fold it over the fillings. Let it cook for another minute, then
                 slide it onto a plate.  
             </li>
             <br>
             <li>
-                <b>Enjoy: </b>
+                <strong>Enjoy: </strong>
                 Serve hot, with additional salt and pepper if needed.
             </li>
         </ol>
@@ -100,8 +100,5 @@
                 <td>22g</td>
             </tr>
     </span>
-    <div class="autor">
-        <p>libro</p>
-    </div>
 </body>
 </html>
